[[bin]]
name = "zeitgeist"
path = "./src/main.rs"

[build-dependencies]
substrate-build-script-utils = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }

[dependencies]
pallet-transaction-payment-rpc = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment-rpc-runtime-api = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sc-basic-authorship = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sc-cli = { branch = "polkadot-v0.9.17", features = ["wasmtime"], git = "https://github.com/paritytech/substrate.git" }
sc-client-api = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sc-consensus = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sc-executor = { branch = "polkadot-v0.9.17", features = ["wasmtime"], git = "https://github.com/paritytech/substrate.git" }
sc-keystore = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sc-rpc = { branch = "polkadot-v0.9.17",  git = "https://github.com/paritytech/substrate.git" }
sc-rpc-api = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sc-service = { branch = "polkadot-v0.9.17", features = ["wasmtime"], git = "https://github.com/paritytech/substrate.git" }
sc-telemetry = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sc-transaction-pool = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sc-transaction-pool-api = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sp-api = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sp-block-builder = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sp-blockchain = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sp-consensus = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sp-core = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sp-offchain = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sp-session = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sp-storage = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sp-timestamp = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sp-transaction-pool = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
substrate-frame-rpc-system = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }

# Benchmark

frame-benchmarking = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git", optional = true }
frame-benchmarking-cli = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git", optional = true }

# Cumulus

cumulus-client-cli = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/cumulus", optional = true }
cumulus-client-collator = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/cumulus", optional = true }
cumulus-client-consensus-common = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/cumulus", optional = true }
cumulus-client-consensus-relay-chain = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/cumulus", optional = true }
cumulus-client-network = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/cumulus", optional = true }
cumulus-client-service = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/cumulus", optional = true }
cumulus-primitives-core = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/cumulus", optional = true }
cumulus-primitives-parachain-inherent = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/cumulus", optional = true }
cumulus-relay-chain-interface = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/cumulus", optional = true }
cumulus-relay-chain-local = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/cumulus", optional = true }

# Parachain

nimbus-consensus = { branch = "moonbeam-polkadot-v0.9.17", default-features = false, git = "https://github.com/purestake/nimbus", optional = true }
nimbus-primitives = { branch = "moonbeam-polkadot-v0.9.17", default-features = false, git = "https://github.com/purestake/nimbus", optional = true }
pallet-author-inherent = { branch = "moonbeam-polkadot-v0.9.17", default-features = false, git = "https://github.com/purestake/nimbus", optional = true }
parachain-staking = { rev = "30b955354981b6d11808c10d728e1b93fa919f33", git = "https://github.com/purestake/moonbeam", optional = true }
parity-scale-codec = { optional = true, version = "3.0.0" }
sc-chain-spec = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git", optional = true }
sc-network = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git", optional = true }
sc-tracing = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git", optional = true }
serde = { features = ["derive"], optional = true, version = "1.0.132" }
sp-trie = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git", optional = true }
sp-keystore = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git", optional = true }
substrate-prometheus-endpoint = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git", optional = true }

# Polkadot

polkadot-cli = { tag = "v0.9.17", git = "https://github.com/paritytech/polkadot", optional = true }
polkadot-parachain = { tag = "v0.9.17", git = "https://github.com/paritytech/polkadot", optional = true }
polkadot-primitives = { tag = "v0.9.17", git = "https://github.com/paritytech/polkadot", optional = true }
polkadot-service = { tag = "v0.9.17", git = "https://github.com/paritytech/polkadot", optional = true }
polkadot-test-service = { tag = "v0.9.17", git = "https://github.com/paritytech/polkadot", optional = true }

# Standalone

sc-consensus-aura = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sc-finality-grandpa = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sp-consensus-aura = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
sp-finality-grandpa = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }

# Utility
cfg-if = { version = "1.0.0" }
hex-literal = { version = "0.3.4" }
jsonrpc-core = { version = "18.0.0" }
log = { optional = true, version = "0.4.14" }
structopt = { version = "0.3.25" }

# Zeitgeist

zeitgeist-primitives = { path = "../primitives" }
zeitgeist-runtime = { path = "../runtime" }
zrml-liquidity-mining = { path = "../zrml/liquidity-mining" }
zrml-swaps-rpc = { path = "../zrml/swaps/rpc" }

[features]
default = []
parachain = [
    "zeitgeist-runtime/parachain",

    # Cumulus

    "cumulus-client-cli",
    "cumulus-client-collator",
    "cumulus-client-consensus-common",
    "cumulus-client-consensus-relay-chain",
    "cumulus-client-network",
    "cumulus-client-service",
    "cumulus-primitives-core",
    "cumulus-primitives-parachain-inherent",
    "cumulus-relay-chain-interface",
    "cumulus-relay-chain-local",
    

    # Parachain

    "log",
    "nimbus-consensus",
    "nimbus-primitives",
    "pallet-author-inherent",
    "parachain-staking",
    "parity-scale-codec",
    "sc-chain-spec",
    "sc-network",
    "sc-tracing",
    "serde",
    "sp-keystore",
    "sp-trie",
    "substrate-prometheus-endpoint",

    # Polkadot

    "polkadot-cli",
    "polkadot-parachain",
    "polkadot-primitives",
    "polkadot-service",
    "polkadot-test-service",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-benchmarking-cli",
    "polkadot-service?/runtime-benchmarks",
    "zeitgeist-runtime/runtime-benchmarks"
]

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
build = "build.rs"
description = "An evolving blockchain for prediction markets and futarchy."
edition = "2021"
homepage = "https://zeitgeist.pm"
name = "zeitgeist-node"
version = "0.3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
