[dependencies]
arbitrary = { default-features = false, optional = true, version = "1.0" }
frame-support = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
orml-currencies = { rev = "c439a50e01944aedeef33231e0824a17ed1813bc", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git" }
orml-tokens = { rev = "c439a50e01944aedeef33231e0824a17ed1813bc", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git" }
orml-traits = { rev = "c439a50e01944aedeef33231e0824a17ed1813bc", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git" }
parity-scale-codec = { default-features = false, features = ["derive", "max-encoded-len"], version = "2.0.0" }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { default-features = false, features = ["derive"], optional = true, version = "1.0.132" }
sp-core = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }


[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "orml-currencies/std",
    "orml-tokens/std",
    "orml-traits/std",
    "parity-scale-codec/std",
    "serde",
    "sp-core/std",
    "sp-runtime/std",
]

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
edition = "2021"
name = "zeitgeist-primitives"
version = "0.3.0"
