[build-dependencies]
substrate-wasm-builder = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }

[dependencies]
frame-executive = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-support = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system-rpc-runtime-api = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
orml-benchmarking = { rev = "c439a50e01944aedeef33231e0824a17ed1813bc", default-features = false, optional = true, git = "https://github.com/open-web3-stack/open-runtime-module-library.git" }
orml-currencies = { rev = "c439a50e01944aedeef33231e0824a17ed1813bc", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git" }
orml-tokens = { rev = "c439a50e01944aedeef33231e0824a17ed1813bc", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git" }
orml-traits = { rev = "c439a50e01944aedeef33231e0824a17ed1813bc", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git" }
pallet-balances = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-collective = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-democracy = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-identity = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-membership = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-preimage = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-randomness-collective-flip = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-scheduler = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-sudo = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-timestamp = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment-rpc-runtime-api = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-treasury = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-utility = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-vesting = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
parity-scale-codec = { default-features = false, features = ["derive", "max-encoded-len"], version = "2.0.0" }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-api = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-block-builder = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-core = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-inherents = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-offchain = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-session = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-transaction-pool = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-version = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
substrate-fixed = { rev = "5984ba9b9433d5007597c7f03f65ea5bf6d08601", default-features = false, features = ["serde"], git = "https://github.com/encointer/substrate-fixed" }

# Benchmark

frame-benchmarking = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true }
frame-system-benchmarking = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true }

# Cumulus

cumulus-pallet-dmp-queue = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/cumulus", optional = true }
cumulus-pallet-parachain-system = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/cumulus", optional = true }
cumulus-pallet-xcm = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/cumulus", optional = true }
cumulus-pallet-xcmp-queue = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/cumulus", optional = true }
cumulus-primitives-core = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/cumulus", optional = true }
cumulus-primitives-timestamp = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/cumulus", optional = true }
cumulus-primitives-utility = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/cumulus", optional = true }
parachain-info = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/cumulus", optional = true }

# Parachain

nimbus-primitives = { branch = "moonbeam-polkadot-v0.9.17", default-features = false, git = "https://github.com/purestake/nimbus", optional = true }
pallet-author-inherent = { branch = "moonbeam-polkadot-v0.9.17", default-features = false, git = "https://github.com/purestake/nimbus", optional = true }
pallet-author-mapping = { rev = "30b955354981b6d11808c10d728e1b93fa919f33", default-features = false, git = "https://github.com/purestake/moonbeam", optional = true }
pallet-author-slot-filter = { branch = "moonbeam-polkadot-v0.9.17", default-features = false, git = "https://github.com/purestake/nimbus", optional = true }
pallet-crowdloan-rewards = { branch = "moonbeam-polkadot-v0.9.17", default-features = false, git = "https://github.com/PureStake/crowdloan-rewards", optional = true }
parachain-staking = { rev = "30b955354981b6d11808c10d728e1b93fa919f33", default-features = false, git = "https://github.com/purestake/moonbeam", optional = true }

# Polkadot

pallet-xcm = { tag = "v0.9.17", default-features = false, git = "https://github.com/paritytech/polkadot", optional = true }
polkadot-parachain = { tag = "v0.9.17", default-features = false, git = "https://github.com/paritytech/polkadot", optional = true }
xcm = { tag = "v0.9.17", default-features = false, git = "https://github.com/paritytech/polkadot", optional = true }
xcm-builder = { tag = "v0.9.17", default-features = false, git = "https://github.com/paritytech/polkadot", optional = true }
xcm-executor = { tag = "v0.9.17", default-features = false, git = "https://github.com/paritytech/polkadot", optional = true }

# Standalone

pallet-aura = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
pallet-grandpa = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-consensus-aura = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-finality-grandpa = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }

# Utility
cfg-if = { version = "1.0.0" }
hex-literal = { default-features = false, optional = true, version = "0.3.4" }
log = { version = "0.4.8", default-features = false, optional = true }

# Zeitgeist

zeitgeist-primitives = { default-features = false, path = "../primitives" }
zrml-authorized = { default-features = false, path = "../zrml/authorized" }
zrml-court = { default-features = false, path = "../zrml/court" }
zrml-liquidity-mining = { default-features = false, path = "../zrml/liquidity-mining" }
zrml-market-commons = { default-features = false, path = "../zrml/market-commons" }
zrml-prediction-markets = { default-features = false, path = "../zrml/prediction-markets" }
zrml-rikiddo = { default-features = false, path = "../zrml/rikiddo" }
zrml-simple-disputes = { default-features = false, path = "../zrml/simple-disputes" }
zrml-swaps = { default-features = false, path = "../zrml/swaps" }
zrml-swaps-runtime-api = { default-features = false, path = "../zrml/swaps/runtime-api" }

[dev-dependencies]
sp-io = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }

[features]
default = ["std"]
parachain = [
	# Cumulus

	"cumulus-pallet-dmp-queue",
	"cumulus-pallet-parachain-system",
	"cumulus-pallet-xcm",
	"cumulus-pallet-xcmp-queue",
	"cumulus-primitives-core",
	"cumulus-primitives-timestamp",
	"cumulus-primitives-utility",
	"parachain-info",

	# Parachain

	"nimbus-primitives",
	"pallet-author-inherent",
	"pallet-author-mapping",
	"pallet-author-slot-filter",
	"pallet-crowdloan-rewards",
	"parachain-staking",

	# Polkadot

	"pallet-xcm",
	"polkadot-parachain",
	"xcm-builder",
	"xcm-executor",
	"xcm",

	# Misc

	"log"
]

runtime-benchmarks = [
	"pallet-identity/runtime-benchmarks",
	"pallet-membership/runtime-benchmarks",
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking",
    "frame-system/runtime-benchmarks",
    "hex-literal",
	"orml-tokens/runtime-benchmarks",
	"orml-benchmarking",
	"pallet-author-mapping/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
	"pallet-crowdloan-rewards/runtime-benchmarks",
	"pallet-democracy/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-preimage/runtime-benchmarks",
	"pallet-scheduler/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-vesting/runtime-benchmarks",
    "pallet-xcm/runtime-benchmarks",
	"parachain-staking/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "xcm-builder/runtime-benchmarks",
    "zrml-authorized/runtime-benchmarks",
    "zrml-court/runtime-benchmarks",
    "zrml-liquidity-mining/runtime-benchmarks",
    "zrml-prediction-markets/runtime-benchmarks",
    "zrml-simple-disputes/runtime-benchmarks",
    "zrml-swaps/runtime-benchmarks",
]
std = [
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"hex-literal",
	"log/std",
	"orml-benchmarking/std",
	"orml-currencies/std",
	"orml-tokens/std",
	"orml-traits/std",
	"pallet-balances/std",
	"pallet-collective/std",
	"pallet-democracy/std",
	"pallet-identity/std",
	"pallet-membership/std",
	"pallet-preimage/std",
	"pallet-randomness-collective-flip/std",
	"pallet-scheduler/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-utility/std",
	"pallet-vesting/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"substrate-fixed/std",

	# Benchmark

	"frame-benchmarking?/std",
	"frame-system-benchmarking?/std",

	# Cumulus

	"cumulus-pallet-dmp-queue?/std",
	"cumulus-pallet-parachain-system?/std",
	"cumulus-pallet-xcm?/std",
	"cumulus-pallet-xcmp-queue?/std",
	"cumulus-primitives-core?/std",
	"cumulus-primitives-timestamp?/std",
	"cumulus-primitives-utility?/std",
	"parachain-info?/std",

	# Parachain

	"nimbus-primitives?/std",
	"pallet-author-inherent?/std",
	"pallet-author-mapping?/std",
	"pallet-author-slot-filter?/std",
	"pallet-crowdloan-rewards?/std",
	"parachain-staking?/std",

	# Polkadot

	"pallet-xcm?/std",
	"polkadot-parachain?/std",
	"xcm-builder?/std",
	"xcm-executor?/std",
	"xcm?/std",

	# Standalone

	"pallet-aura/std",
	"pallet-grandpa/std",
	"sp-consensus-aura/std",
	"sp-finality-grandpa/std",

	# Zeitgeist

	"zeitgeist-primitives/std",
	"zrml-authorized/std",
	"zrml-court/std",
	"zrml-liquidity-mining/std",
	"zrml-market-commons/std",
	"zrml-prediction-markets/std",
	"zrml-rikiddo/std",
	"zrml-simple-disputes/std",
	"zrml-swaps-runtime-api/std",
	"zrml-swaps/std",
]
txfilter = [
	"log"
]

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
edition = "2021"
name = "zeitgeist-runtime"
version = "0.3.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
