[dependencies]
arrayvec = { default-features = false, version = "0.7" }
frame-benchmarking = { branch = "polkadot-v0.9.17", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git" }
frame-support = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
parity-scale-codec = { default-features = false, features = ["derive", "max-encoded-len"], version = "2.0.0" }
rand = { default-features = false, features = ["alloc", "std_rng"], version = "0.8" }
sp-runtime = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
zeitgeist-primitives = { default-features = false, path = "../../primitives" }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
zrml-market-commons = { default-features = false, path = "../market-commons" }

[dev-dependencies]
pallet-balances = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
pallet-randomness-collective-flip = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }
pallet-timestamp = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git"}
sp-io = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git" }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks"
]
std = [
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "sp-runtime/std",
    "zeitgeist-primitives/std",
    "zrml-market-commons/std"
]

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
edition = "2021"
name = "zrml-court"
version = "0.3.0"
