
[dependencies]
frame-benchmarking = { branch = "polkadot-v0.9.17", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git" }
frame-support = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
orml-traits = { rev = "c439a50e01944aedeef33231e0824a17ed1813bc", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git" }
parity-scale-codec = { default-features = false, features = ["derive", "max-encoded-len"], version = "2.0.0" }
sp-runtime = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
zeitgeist-primitives = { default-features = false, path = "../../primitives" }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

# Mock
orml-tokens = { rev = "c439a50e01944aedeef33231e0824a17ed1813bc", git = "https://github.com/open-web3-stack/open-runtime-module-library.git", optional = true }
pallet-balances = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git", optional = true }
sp-io = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git", optional = true }

[dev-dependencies]
zrml-orderbook-v1 = { features = ["mock"], path = "." }

[features]
default = ["std"]
mock = [
    "orml-tokens",
    "pallet-balances",
    "sp-io",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks"
]
std = [
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "orml-traits/std",
    "parity-scale-codec/std",
    "sp-runtime/std",
    "zeitgeist-primitives/std",
]

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
edition = "2021"
name = "zrml-orderbook-v1"
version = "0.3.0"
