[dependencies]
frame-benchmarking = { branch = "polkadot-v0.9.17", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git" }
frame-support = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
orml-traits = { rev = "c439a50e01944aedeef33231e0824a17ed1813bc", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git" }
parity-scale-codec = { default-features = false, features = ["derive", "max-encoded-len"], version = "2.0.0" }
sp-arithmetic = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
zeitgeist-primitives = { default-features = false, path = "../../primitives" }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
zrml-authorized = { default-features = false, path = "../authorized" }
zrml-court = { default-features = false, path = "../court" }
zrml-liquidity-mining = { default-features = false, path = "../liquidity-mining" }
zrml-market-commons = { default-features = false, path = "../market-commons" }
zrml-simple-disputes = { default-features = false, path = "../simple-disputes" }

# Mock

orml-currencies = { rev = "c439a50e01944aedeef33231e0824a17ed1813bc", git = "https://github.com/open-web3-stack/open-runtime-module-library.git", optional = true }
orml-tokens = { rev = "c439a50e01944aedeef33231e0824a17ed1813bc", git = "https://github.com/open-web3-stack/open-runtime-module-library.git", optional = true }
pallet-balances = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git", optional = true }
pallet-randomness-collective-flip = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git", optional = true }
pallet-timestamp = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git", optional = true }
sp-api = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git", optional = true }
sp-io = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git", optional = true }
substrate-fixed = { rev = "5984ba9b9433d5007597c7f03f65ea5bf6d08601", optional = true, git = "https://github.com/encointer/substrate-fixed" }
zrml-prediction-markets-runtime-api = { features = ["std"], optional = true, path = "./runtime-api" }
zrml-rikiddo = { optional = true, path = "../rikiddo" }
zrml-swaps = { optional = true, path = "../swaps" }

[dev-dependencies]
zrml-prediction-markets = { features = ["mock"], path = "." }

[features]
default = ["std"]
mock = [
    "orml-currencies",
    "orml-tokens",
    "pallet-balances",
    "pallet-randomness-collective-flip",
    "pallet-timestamp",
    "sp-api",
    "sp-io",
    "substrate-fixed",
    "zrml-prediction-markets-runtime-api",
    "zrml-rikiddo",
    "zrml-swaps",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
std = [
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "orml-traits/std",
    "parity-scale-codec/std",
    "sp-arithmetic/std",
    "sp-runtime/std",
    "zeitgeist-primitives/std",
    "zrml-authorized/std",
    "zrml-court/std",
    "zrml-liquidity-mining/std",
    "zrml-market-commons/std",
    "zrml-simple-disputes/std",
]

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
edition = "2021"
name = "zrml-prediction-markets"
version = "0.3.0"
