[dependencies]
frame-benchmarking = { branch = "polkadot-v0.9.17", default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git" }
frame-support = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
orml-traits = { rev = "c439a50e01944aedeef33231e0824a17ed1813bc", default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library.git" }
parity-scale-codec = { default-features = false, features = ["derive", "max-encoded-len"], version = "2.0.0" }
sp-runtime = { branch = "polkadot-v0.9.17", default-features = false, git = "https://github.com/paritytech/substrate.git" }
substrate-fixed = { rev = "5984ba9b9433d5007597c7f03f65ea5bf6d08601", default-features = false, git = "https://github.com/encointer/substrate-fixed" }
zeitgeist-primitives = { default-features = false, path = "../../primitives" }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
zrml-liquidity-mining = { default-features = false, path = "../liquidity-mining" }
zrml-rikiddo = { default-features = false, path = "../rikiddo" }

# Mock

orml-currencies = { rev = "c439a50e01944aedeef33231e0824a17ed1813bc", git = "https://github.com/open-web3-stack/open-runtime-module-library.git", optional = true }
orml-tokens = { rev = "c439a50e01944aedeef33231e0824a17ed1813bc", git = "https://github.com/open-web3-stack/open-runtime-module-library.git", optional = true }
pallet-balances = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git", optional = true }
pallet-timestamp = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git", optional = true }
sp-api = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git", optional = true }
sp-io = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate.git", optional = true }
zrml-market-commons = { optional = true, path = "../market-commons" }
zrml-swaps-runtime-api = { optional = true, path = "./runtime-api" }

[dev-dependencies]
zrml-swaps = { features = ["mock"], path = "." }
more-asserts = "0.2"

[features]
default = ["std"]
mock = [
    "orml-currencies",
    "orml-tokens",
    "pallet-balances",
    "pallet-timestamp",
    "sp-api",
    "sp-io",
    "zrml-market-commons",
    "zrml-swaps-runtime-api",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks"
]
std = [
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "orml-traits/std",
    "parity-scale-codec/std",
    "sp-runtime/std",
    "substrate-fixed/std",
    "zeitgeist-primitives/std",
    "zrml-liquidity-mining/std",
    "zrml-rikiddo/std",
]

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
edition = "2021"
name = "zrml-swaps"
version = "0.3.0"
